figue/tests/integration/snapshots/main__integration__subcommand_errors__nested_subcommand_not_provided_with_builtins.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
Error: expected a subcommand

available subcommands:
  clone  Clone a repository
  push   Push changes
  pull   Pull changes
Note: Run with --help for usage information.
