figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_missing_required_named.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
main connect

USAGE:
    main connect [OPTIONS]

OPTIONS:
        --url <STRING>
            Server URL (required)
        --timeout <U32>
            Optional timeout
