figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_missing_required_positional.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
main init

Initialize a new project

USAGE:
    main init [OPTIONS] <NAME>

ARGUMENTS:
        <NAME>
            Project name (creates directory with this name)

OPTIONS:
    -t, --template <STRING>
            Template to use (skips interactive selection)
