figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_mixed_missing_arguments.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
main deploy

USAGE:
    main deploy [OPTIONS] <ENVIRONMENT>

ARGUMENTS:
        <ENVIRONMENT>
            Environment to deploy to

OPTIONS:
        --region <STRING>
            Deployment region (required)
        --version <STRING>
            Optional version tag


Error: missing required argument
   ╭─[ <usage>:1:19 ]
   │
 1 │ deploy production --region <region>
   │                   ────────┬────────  
   │                           ╰────────── Deployment region (required)
───╯
