figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_multiple_missing_positionals.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
main create

USAGE:
    main create <RESOURCE_TYPE> <RESOURCE_NAME> <LOCATION>

ARGUMENTS:
        <RESOURCE_TYPE>
            Resource type (e.g., user, project)
        <RESOURCE_NAME>
            Resource name
        <LOCATION>
            Resource location
