figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_with_partial_input.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
main init

USAGE:
    main init <NAME> <DESCRIPTION>

ARGUMENTS:
        <NAME>
            Project name
        <DESCRIPTION>
            Project description
